[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Column.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Walls.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=6]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/ping_pong_8bit_peeeeeep.ogg" type="AudioStream" id=8]

[node name="Main" type="Node"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 10, 262 )

[node name="Column" parent="." instance=ExtResource( 2 )]
position = Vector2( 429, 262 )

[node name="Walls" parent="." instance=ExtResource( 3 )]

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 430.587, 262 )

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 848, 262 )

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="Goal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="ai_goal" from="Ball" to="." method="_on_Ball_ai_goal"]
[connection signal="player_goal" from="Ball" to="." method="_on_Ball_player_goal"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
